Add @PendingFeature since Groovy's @NotYetImplemented AST transform has some caveats with data driven tests

--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -12,7 +12,7 @@ meta-annotation.
 
 === Ignore
 
-To temporarily prevent a feature method from getting executed, annotate it with +spock.lang.Ignore+:
+To temporarily prevent a feature method from getting executed, annotate it with `spock.lang.Ignore`:
 
 [source,groovy]
 ----
@@ -40,7 +40,7 @@ In most execution environments, ignored feature methods and specs will be report
 
 === IgnoreRest
 
-To ignore all but a (typically) small subset of methods, annotate the latter with +spock.lang.IgnoreRest+:
+To ignore all but a (typically) small subset of methods, annotate the latter with `spock.lang.IgnoreRest`:
 
 [source,groovy]
 ----
@@ -56,7 +56,7 @@ def "I'll also be ignored"() { ... }
 
 === IgnoreIf
 
-To ignore a feature method under certain conditions, annotate it with +spock.lang.IgnoreIf+,
+To ignore a feature method under certain conditions, annotate it with `spock.lang.IgnoreIf`,
 followed by a predicate:
 
 [source,groovy]
@@ -94,6 +94,32 @@ def "I'll only run on Windows"() { ... }
 `Requires` works exactly like `IgnoreIf`, except that the predicate is inverted. In general, it is preferable
 to state the conditions under which a method gets executed, rather than the conditions under which it gets ignored.
 
+
+=== PendingFeature
+
+To indicate that the feature is not fully implemented yet and should not be reported as error, annotate it with `spock.lang.PendingFeature`.
+
+The use case is to annotate tests that can not yet run but should already be committed.
+The main difference to `Ignore` is that the test are executed, but test failures are ignored.
+If the test passes without an error, then it will be reported as failure since the `PendingFeature` annotation should be removed.
+This way the tests will become part of the normal tests instead of being ignored forever.
+
+Groovy has the `groovy.transform.NotYetImplemented` annotation which is similar but behaves a differently.
+
+* it will mark failing tests as passed
+* if at least one iteration of a data-driven test passes it will be reported as error
+
+`PendingFeature`:
+
+* it will mark failing tests as skipped
+* if at least one iteration of a data-driven test fails it will be reported as skipped
+* if every iteration of a data-driven test passes it will be reported as error
+
+[source,groovy]
+----
+@PendingFeature
+def "not implemented yet"() { ... }
+----
 
 === Stepwise
 
