--- a/docs/data_driven_testing.adoc
+++ b/docs/data_driven_testing.adoc
@@ -1,9 +1,9 @@
-== Data Driven Testing
+= Data Driven Testing
 
 Oftentimes, it is useful to exercise the same test code multiple times, with varying inputs and expected results.
 Spock's data driven testing support makes this a first class feature.
 
-=== Introduction
+== Introduction
 
 Suppose we want to specify the behavior of the +Math.max+ method:
 
@@ -48,7 +48,7 @@ We have finished the test logic, but still need to supply the data values to be 
 which always comes at the end of the method. In the simplest (and most common) case, the +where:+ block holds a _data table_.
 
 [[data-tables]]
-=== Data Tables
+== Data Tables
 
 Data tables are a convenient way to exercise a feature method with a fixed set of data values:
 
@@ -84,13 +84,13 @@ a | _
 0 | _
 ----
 
-=== Isolated Execution of Iterations
+== Isolated Execution of Iterations
 
 Iterations are isolated from each other in the same way as separate feature methods. Each iteration gets its own instance
 of the specification class, and the `setup` and `cleanup` methods will be called before and after each iteration,
 respectively.
 
-=== Sharing of Objects between Iterations
+== Sharing of Objects between Iterations
 
 In order to share an object between iterations, it has to be kept in a `@Shared` or static field.
 
@@ -100,7 +100,7 @@ Note that such objects will also be shared with other methods. There is currentl
 just between iterations of the same method. If you consider this a problem, consider putting each method into a separate
 spec, all of which can be kept in the same file. This achieves better isolation at the cost of some boilerplate code.
 
-=== Syntactic Variations
+== Syntactic Variations
 
 The previous code can be tweaked in a few ways. First, since the `where:` block already declares all data variables, the
 method parameters can be omitted.footnote:[The idea behind allowing method parameters is to enable better IDE support.
@@ -125,7 +125,7 @@ class DataDriven extends Specification {
 }
 ----
 
-=== Reporting of Failures
+== Reporting of Failures
 
 Let's assume that our implementation of the `max` method has a flaw, and one of the iterations fails:
 
@@ -147,7 +147,7 @@ footnote:[For example, a feature method could use data variables in its `setup:`
 In any case, it would be nice if Spock made it loud and clear which iteration failed, rather than just reporting the
 failure. This is the purpose of the `@Unroll` annotation.
 
-=== Method Unrolling
+== Method Unrolling
 
 A method annotated with `@Unroll` will have its iterations reported independently:
 
@@ -208,7 +208,7 @@ for further details on this topic.
 The `@Unroll` annotation can also be placed on a spec. This has the same effect as placing it on each data-driven
 feature method of the spec.
 
-=== Data Pipes
+== Data Pipes
 
 Data tables aren't the only way to supply values to data variables. In fact, a data table is just syntactic sugar for
 one or more _data pipes_:
@@ -229,7 +229,7 @@ used as a data provider. This includes objects of type `Collection`, `String`, `
 they can fetch data from external sources like text files, databases and spreadsheets, or generate data randomly.
 Data providers are queried for their next value only when needed (before the next iteration).
 
-=== Multi-Variable Data Pipes
+== Multi-Variable Data Pipes
 
 If a data provider returns multiple values per iteration (as an object that Groovy knows how to iterate over),
 it can be connected to multiple data variables simultaneously. The syntax is somewhat similar to Groovy multi-assignment
@@ -255,7 +255,7 @@ where:
 [a, b, _, c] << sql.rows("select * from maxdata")
 ----
 
-=== Data Variable Assignment
+== Data Variable Assignment
 
 A data variable can be directly assigned a value:
 
@@ -282,7 +282,7 @@ b = row.b
 c = row.c
 ----
 
-=== Combining Data Tables, Data Pipes, and Variable Assignments
+== Combining Data Tables, Data Pipes, and Variable Assignments
 
 Data tables, data pipes, and variable assignments can be combined as needed:
 
@@ -300,19 +300,19 @@ b << [5, 0, 0]
 c = a > b ? a : b
 ----
 
-=== Number of Iterations
+== Number of Iterations
 
 The number of iterations depends on how much data is available. Successive executions of the same method can
 yield different numbers of iterations. If a data provider runs out of values sooner than its peers, an exception will occur.
 Variable assignments don't affect the number of iterations. A `where:` block that only contains assignments yields
 exactly one iteration.
 
-=== Closing of Data Providers
+== Closing of Data Providers
 
 After all iterations have completed, the zero-argument `close` method is called on all data providers that have
 such a method.
 
-=== More on Unrolled Method Names
+== More on Unrolled Method Names
 
 An unrolled method name is similar to a Groovy `GString`, except for the following differences:
 
