Extended explanation of fixture methods
Extended explanation of fixture methods for specificaiton inheritance.

--- a/docs/spock_primer.adoc
+++ b/docs/spock_primer.adoc
@@ -98,7 +98,11 @@ Usually it's a good idea to use a fresh fixture for every feature method, which 
 methods are for. Occasionally it makes sense for feature methods to share a fixture, which is achieved by using shared
 fields together with the `setupSpec()` and `cleanupSpec()` methods. All fixture methods are optional.
 
-Note: The `setupSpec()` and `cleanupSpec()` methods may not reference instance fields. Fixture methods overridden in subclasses will be executed like class constructors.
+Note:
+
+. The `setupSpec()` and `cleanupSpec()` methods may not reference instance fields.
+. In case Specificiation inheritance is being done and fixture methods are overridden then `setup()` of super class will run before `setup()` of sub class. `cleanup()` works in reverse order i.e. `cleanup()` of sub class will execute before `cleanup()` of super class.  `setupSpec()` and `cleanupSpec()` will work on similar lines. 
+
 
 === Feature Methods
 
