--- a/docs/spock_primer.adoc
+++ b/docs/spock_primer.adoc
@@ -94,11 +94,18 @@ def cleanupSpec() {}   // run after the last feature method
 ----
 
 Fixture methods are responsible for setting up and cleaning up the environment in which feature methods are run.
-Usually it's a good idea to use a fresh fixture for every feature method, which is what the `setup()` and `cleanup()`
-methods are for. Occasionally it makes sense for feature methods to share a fixture, which is achieved by using shared
-fields together with the `setupSpec()` and `cleanupSpec()` methods. All fixture methods are optional.
+Usually it's a good idea to use a fresh fixture for every feature method, which is what the `setup()` and `cleanup()` methods are for.
 
-Note: The `setupSpec()` and `cleanupSpec()` methods may not reference instance fields.
+All fixture methods are optional.
+
+Occasionally it makes sense for feature methods to share a fixture, which is achieved by using shared
+fields together with the `setupSpec()` and `cleanupSpec()` methods.
+Note that `setupSpec()` and `cleanupSpec()` _may not_ reference instance fields unless they are annotated with `@Shared`.
+
+If fixture methods are overridden in a specification subclass then `setup()` of the superclass will run before `setup()` of the subclass.
+`cleanup()` works in reverse order, that is `cleanup()` of the subclass will execute before `cleanup()` of the superclass.
+`setupSpec()` and `cleanupSpec()` behave in the same way.
+There is no need to explicitly call `super.setup()` or `super.cleanup()` as Spock will automatically find and execute fixture methods at all levels in an inheritance heirarchy.
 
 == Feature Methods
 
